--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+pandas = "^2.2.0"
+streamlit = "^1.31.1"
+openpyxl = "^3.1.2"
 
 
 [build-system]
